[project]
name = "cryptic-pocket-transformer"
version = "0.1.0"
description = "Transformer model for cryptic pocket detection inspired by CrypTothML"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mdanalysis>=2.7.0",
    "numpy>=1.24.0",
    "torch>=2.2.0",
    "tqdm>=4.66.0",
    "scikit-learn>=1.3.0"
]

# Configure uv to pull PyTorch specifically with CUDA 12.1 support
[tool.uv]
index = [
    { url = "https://download.pytorch.org/whl/cu121", name = "pytorch", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch" }
